[gd_scene format=4 uid="uid://b4dswwg1tbofl"]

[ext_resource type="FontFile" uid="uid://bxpfu70psooq6" path="res://assets/fonts/Kenney Blocks.ttf" id="1_1aipp"]
[ext_resource type="Script" uid="uid://vg0jjt7ubajx" path="res://user_interface/main_menu.gd" id="1_ejyv4"]
[ext_resource type="TileSet" uid="uid://cmvh0wonvdala" path="res://tile_set.tres" id="1_xqlja"]
[ext_resource type="Texture2D" uid="uid://cyf705376ok3m" path="res://assets/sprites/monochrome_tilemap_transparent_packed.png" id="4_l8n0t"]

[sub_resource type="LabelSettings" id="LabelSettings_xqlja"]
font = ExtResource("1_1aipp")
font_size = 96
font_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1aipp"]
font = ExtResource("1_1aipp")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejyv4"]
bg_color = Color(0.20152712, 0.20152637, 0.20152655, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2gaw"]
bg_color = Color(0, 0.2, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8n0t"]
bg_color = Color(0, 0.33333334, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kemk3"]
bg_color = Color(0, 0, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q3p2"]
bg_color = Color(0, 0, 0.33333334, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqlja"]
bg_color = Color(0.2, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nja1t"]
bg_color = Color(0.33333334, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q3p2"]
atlas = ExtResource("4_l8n0t")
region = Rect2(96, 144, 16, 32)

[node name="MainMenu" type="Control" unique_id=435155144]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejyv4")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1526446080]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1549398874]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAFABsAAAAPABMAAAAFABoAAAAPABIAAAAEABsAAAAPABMAAAAEABoAAAAPABIAAAADABsAAAAPABMAAAADABoAAAAPABIAAAADABkAAAAPABIAAAADABgAAAAPABIAAAADABcAAAAPABIAAAADABYAAAAPABIAAAADABUAAAAPABIAAAADABQAAAAPABIAAAADABMAAAAPABIAAAADABIAAAAPABIAAAADABEAAAAPABIAAAADABAAAAAPABIAAAADAA8AAAAPABIAAAADAA4AAAAPABIAAAADAA0AAAAPABIAAAADAAwAAAAPABIAAAADAAsAAAAPABIAAAADAAoAAAAPABIAAAADAAkAAAAQABIAAAADAAgAAAAQABIAAAADAAcAAAAQABIAAAADAAYAAAAQABIAAAADAAUAAAAQABIAAAADAAQAAAAQABIAAAADAAMAAAAQABIAAAADAAIAAAAQABIAAAADAAEAAAAQABIAAAADAAAAAAAQABEAAAACABsAAAAPABMAAAACABoAAAAPABIAAAACABkAAAAPABIAAAACABgAAAAPABIAAAACABcAAAAPABIAAAACABYAAAAPABIAAAACABUAAAAPABIAAAACABQAAAAPABIAAAACABMAAAAPABIAAAACABIAAAAPABIAAAACABEAAAAPABIAAAACABAAAAAPABIAAAACAA8AAAAPABIAAAACAA4AAAAPABIAAAACAA0AAAAPABIAAAACAAwAAAAPABIAAAACAAsAAAAPABIAAAACAAoAAAAPABIAAAACAAkAAAAPABIAAAACAAgAAAAPABIAAAACAAcAAAAPABIAAAACAAYAAAAPABIAAAACAAUAAAAPABIAAAACAAQAAAAPABIAAAACAAMAAAAPABIAAAACAAIAAAAPABIAAAACAAEAAAAPABIAAAACAAAAAAAPABEAAAABABsAAAAPABMAAAABABoAAAAPABIAAAABABkAAAAPABIAAAABABgAAAAPABIAAAABABcAAAAPABIAAAABABYAAAAPABIAAAABABUAAAAPABIAAAABABQAAAAPABIAAAABABMAAAAPABIAAAABABIAAAAPABIAAAABABEAAAAPABIAAAABABAAAAAPABIAAAABAA8AAAAPABIAAAABAA4AAAAPABIAAAABAA0AAAAPABIAAAABAAwAAAAPABIAAAABAAsAAAAPABIAAAABAAoAAAAPABIAAAABAAkAAAAPABIAAAABAAgAAAAPABIAAAABAAcAAAAPABIAAAABAAYAAAAPABIAAAABAAUAAAAPABIAAAABAAQAAAAPABIAAAABAAMAAAAPABIAAAABAAIAAAAPABIAAAABAAEAAAAPABIAAAABAAAAAAAPABEAAAAAABsAAAAOABMAAAAAABoAAAAOABIAAAAAABkAAAAOABIAAAAAABgAAAAOABIAAAAAABcAAAAOABIAAAAAABYAAAAOABIAAAAAABUAAAAOABIAAAAAABQAAAAOABIAAAAAABMAAAAOABIAAAAAABIAAAAOABIAAAAAABEAAAAOABIAAAAAABAAAAAOABIAAAAAAA8AAAAOABIAAAAAAA4AAAAOABIAAAAAAA0AAAAOABIAAAAAAAwAAAAOABIAAAAAAAsAAAAOABIAAAAAAAoAAAAOABIAAAAAAAkAAAAOABIAAAAAAAgAAAAOABIAAAAAAAcAAAAOABIAAAAAAAYAAAAOABIAAAAAAAUAAAAOABIAAAAAAAQAAAAOABIAAAAAAAMAAAAOABIAAAAAAAIAAAAOABIAAAAAAAEAAAAOABIAAAAAAAAAAAAOABEAAAAxABsAAAAQABMAAAAxABoAAAAQABIAAAAwABsAAAAPABMAAAAwABoAAAAPABIAAAAvABsAAAAPABMAAAAvABoAAAAPABIAAAAuABsAAAAPABMAAAAuABoAAAAPABIAAAAtABsAAAAPABMAAAAtABoAAAAPABIAAAAsABsAAAAPABMAAAAsABoAAAAPABIAAAArABsAAAAPABMAAAArABoAAAAPABIAAAAqABsAAAAPABMAAAAqABoAAAAPABIAAAApABsAAAAPABMAAAApABoAAAAPABIAAAAoABsAAAAPABMAAAAoABoAAAAPABIAAAAnABsAAAAPABMAAAAnABoAAAAPABIAAAAmABsAAAAPABMAAAAmABoAAAAPABIAAAAlABsAAAAPABMAAAAlABoAAAAPABIAAAAkABsAAAAPABMAAAAkABoAAAAPABIAAAAjABsAAAAPABMAAAAjABoAAAAPABIAAAAiABsAAAAPABMAAAAiABoAAAAPABIAAAAhABsAAAAPABMAAAAhABoAAAAPABIAAAAgABsAAAAPABMAAAAgABoAAAAPABIAAAAfABsAAAAPABMAAAAfABoAAAAPABIAAAAeABsAAAAPABMAAAAeABoAAAAPABIAAAAdABsAAAAPABMAAAAdABoAAAAPABIAAAAcABsAAAAPABMAAAAcABoAAAAPABIAAAAbABsAAAAPABMAAAAbABoAAAAPABIAAAAaABsAAAAPABMAAAAaABoAAAAPABIAAAAZABsAAAAPABMAAAAZABoAAAAPABIAAAAYABsAAAAPABMAAAAYABoAAAAPABIAAAAXABsAAAAPABMAAAAXABoAAAAPABIAAAAWABsAAAAPABMAAAAWABoAAAAPABIAAAAVABsAAAAPABMAAAAVABoAAAAPABIAAAAUABsAAAAPABMAAAAUABoAAAAPABIAAAATABsAAAAPABMAAAATABoAAAAPABIAAAASABsAAAAPABMAAAASABoAAAAPABIAAAARABsAAAAPABMAAAARABoAAAAPABIAAAAQABsAAAAPABMAAAAQABoAAAAPABIAAAAPABsAAAAPABMAAAAPABoAAAAPABIAAAAOABsAAAAPABMAAAAOABoAAAAPABIAAAANABsAAAAPABMAAAANABoAAAAPABIAAAAMABsAAAAPABMAAAAMABoAAAAPABIAAAALABsAAAAPABMAAAALABoAAAAPABIAAAAKABsAAAAPABMAAAAKABoAAAAPABIAAAAJABsAAAAPABMAAAAJABoAAAAPABIAAAAIABsAAAAPABMAAAAIABoAAAAPABIAAAAHABsAAAAPABMAAAAHABoAAAAPABIAAAAGABsAAAAPABMAAAAGABoAAAAPABIAAAAxABkAAAAQABIAAAAxABgAAAAQABIAAAAxABcAAAAQABIAAAAxABYAAAAQABIAAAAxABUAAAAQABIAAAAxABQAAAAQABIAAAAxABMAAAAQABIAAAAxABIAAAAQABIAAAAxABEAAAAQABIAAAAxABAAAAAQABIAAAAxAA8AAAAQABIAAAAxAA4AAAAQABIAAAAxAA0AAAAQABIAAAAxAAwAAAAQABIAAAAxAAsAAAAQABIAAAAxAAoAAAAQABIAAAAxAAkAAAAQABIAAAAxAAgAAAAQABIAAAAxAAcAAAAQABIAAAAxAAYAAAAQABIAAAAxAAUAAAAQABIAAAAxAAQAAAAQABIAAAAxAAMAAAAQABIAAAAxAAIAAAAQABIAAAAxAAEAAAAQABIAAAAxAAAAAAAQABEAAAAwABkAAAAPABIAAAAwABgAAAAPABIAAAAwABcAAAAPABIAAAAwABYAAAAPABIAAAAwABUAAAAPABIAAAAwABQAAAAPABIAAAAwABMAAAAPABIAAAAwABIAAAAPABIAAAAwABEAAAAPABIAAAAwABAAAAAPABIAAAAwAA8AAAAPABIAAAAwAA4AAAAPABIAAAAwAA0AAAAPABIAAAAwAAwAAAAPABIAAAAwAAsAAAAPABIAAAAwAAoAAAAPABIAAAAwAAkAAAAPABIAAAAwAAgAAAAPABIAAAAwAAcAAAAPABIAAAAwAAYAAAAPABIAAAAwAAUAAAAPABIAAAAwAAQAAAAPABIAAAAwAAMAAAAPABIAAAAwAAIAAAAPABIAAAAwAAEAAAAPABIAAAAwAAAAAAAPABEAAAAvABkAAAAPABIAAAAvABgAAAAPABIAAAAvABcAAAAPABIAAAAvABYAAAAPABIAAAAvABUAAAAPABIAAAAvABQAAAAPABIAAAAvABMAAAAPABIAAAAvABIAAAAPABIAAAAvABEAAAAPABIAAAAvABAAAAAPABIAAAAvAA8AAAAPABIAAAAvAA4AAAAPABIAAAAvAA0AAAAPABIAAAAvAAwAAAAPABIAAAAvAAsAAAAPABIAAAAvAAoAAAAPABIAAAAvAAkAAAAPABIAAAAvAAgAAAAPABIAAAAvAAcAAAAPABIAAAAvAAYAAAAPABIAAAAvAAUAAAAPABIAAAAvAAQAAAAPABIAAAAvAAMAAAAPABIAAAAvAAIAAAAPABIAAAAvAAEAAAAPABIAAAAvAAAAAAAPABEAAAAuABkAAAAPABIAAAAuABgAAAAPABIAAAAuABcAAAAPABIAAAAuABYAAAAPABIAAAAuABUAAAAPABIAAAAuABQAAAAPABIAAAAuABMAAAAPABIAAAAuABIAAAAPABIAAAAuABEAAAAPABIAAAAuABAAAAAPABIAAAAuAA8AAAAPABIAAAAuAA4AAAAPABIAAAAuAA0AAAAPABIAAAAuAAwAAAAPABIAAAAuAAsAAAAPABIAAAAuAAoAAAAPABIAAAAuAAkAAAAOABIAAAAuAAgAAAAOABIAAAAuAAcAAAAOABIAAAAuAAYAAAAOABIAAAAuAAUAAAAOABIAAAAuAAQAAAAOABIAAAAuAAMAAAAOABIAAAAuAAIAAAAOABIAAAAuAAEAAAAOABIAAAAuAAAAAAAOABEAAAAtABkAAAAPABIAAAAtABgAAAAPABIAAAAsABkAAAAPABIAAAAsABgAAAAPABIAAAArABkAAAAPABIAAAArABgAAAAPABIAAAAqABkAAAAPABIAAAAqABgAAAAPABIAAAApABkAAAAPABIAAAApABgAAAAPABEAAAAoABkAAAAPABIAAAAoABgAAAAPABEAAAAnABkAAAAPABIAAAAnABgAAAAPABEAAAAmABkAAAAPABIAAAAmABgAAAAPABEAAAAlABkAAAAPABIAAAAlABgAAAAPABEAAAAkABkAAAAPABIAAAAkABgAAAAPABEAAAAjABkAAAAPABIAAAAjABgAAAAPABEAAAAiABkAAAAPABIAAAAiABgAAAAPABEAAAAhABkAAAAPABIAAAAhABgAAAAPABEAAAAgABkAAAAPABIAAAAgABgAAAAPABEAAAAfABkAAAAPABIAAAAfABgAAAAPABEAAAAeABkAAAAPABIAAAAeABgAAAAPABEAAAAdABkAAAAPABIAAAAdABgAAAAPABEAAAAcABkAAAAPABIAAAAcABgAAAAPABEAAAAbABkAAAAPABIAAAAbABgAAAAPABEAAAAaABkAAAAPABIAAAAaABgAAAAPABEAAAAZABkAAAAPABIAAAAZABgAAAAPABEAAAAYABkAAAAPABIAAAAYABgAAAAPABEAAAAXABkAAAAPABIAAAAXABgAAAAPABEAAAAWABkAAAAPABIAAAAWABgAAAAPABEAAAAVABkAAAAPABIAAAAVABgAAAAPABEAAAAUABkAAAAPABIAAAAUABgAAAAPABEAAAATABkAAAAPABIAAAATABgAAAAPABEAAAASABkAAAAPABIAAAASABgAAAAPABEAAAARABkAAAAPABIAAAARABgAAAAPABEAAAAQABkAAAAPABIAAAAQABgAAAAPABEAAAAPABkAAAAPABIAAAAPABgAAAAPABEAAAAOABkAAAAPABIAAAAOABgAAAAPABEAAAANABkAAAAPABIAAAANABgAAAAPABEAAAAMABkAAAAPABIAAAAMABgAAAAPABEAAAALABkAAAAPABIAAAALABgAAAAPABEAAAAKABkAAAAPABIAAAAKABgAAAAPABEAAAAJABkAAAAPABIAAAAJABgAAAAPABEAAAAIABkAAAAPABIAAAAIABgAAAAPABEAAAAHABkAAAAPABIAAAAHABgAAAAPABIAAAAGABkAAAAPABIAAAAGABgAAAAPABIAAAAFABkAAAAPABIAAAAFABgAAAAPABIAAAAEABkAAAAPABIAAAAEABgAAAAPABIAAAAtABcAAAAPABIAAAAtABYAAAAPABIAAAAtABUAAAAPABIAAAAtABQAAAAPABIAAAAtABMAAAAPABIAAAAtABIAAAAPABIAAAAtABEAAAAPABIAAAAtABAAAAAPABIAAAAtAA8AAAAPABIAAAAtAA4AAAAPABIAAAAtAA0AAAAPABIAAAAtAAwAAAAPABIAAAAtAAsAAAAPABIAAAAtAAoAAAAPABEAAAAsABcAAAAPABIAAAAsABYAAAAPABIAAAAsABUAAAAPABIAAAAsABQAAAAPABIAAAAsABMAAAAOABIAAAAsABIAAAAOABIAAAAsABEAAAAOABIAAAAsABAAAAAOABIAAAAsAA8AAAAOABIAAAAsAA4AAAAOABIAAAAsAA0AAAAOABIAAAAsAAwAAAAOABIAAAAsAAsAAAAOABIAAAAsAAoAAAAOABEAAAAFABcAAAAPABIAAAAFABYAAAAPABIAAAAFABUAAAAPABIAAAAFABQAAAAPABIAAAAFABMAAAAQABIAAAAFABIAAAAQABIAAAAFABEAAAAQABIAAAAFABAAAAAQABIAAAAFAA8AAAAQABIAAAAFAA4AAAAQABIAAAAFAA0AAAAQABIAAAAFAAwAAAAQABIAAAAFAAsAAAAQABIAAAAFAAoAAAAQABEAAAAEABcAAAAPABIAAAAEABYAAAAPABIAAAAEABUAAAAPABIAAAAEABQAAAAPABIAAAAEABMAAAAPABIAAAAEABIAAAAPABIAAAAEABEAAAAPABIAAAAEABAAAAAPABIAAAAEAA8AAAAPABIAAAAEAA4AAAAPABIAAAAEAA0AAAAPABIAAAAEAAwAAAAPABIAAAAEAAsAAAAPABIAAAAEAAoAAAAPABEAAAArABcAAAAPABIAAAArABYAAAAPABIAAAArABUAAAAPABIAAAArABQAAAAPABEAAAAqABcAAAAOABIAAAAqABYAAAAOABIAAAAqABUAAAAOABIAAAAqABQAAAAOABEAAAAHABcAAAAQABIAAAAHABYAAAAQABIAAAAHABUAAAAQABIAAAAHABQAAAAQABEAAAAGABcAAAAPABIAAAAGABYAAAAPABIAAAAGABUAAAAPABIAAAAGABQAAAAPABEAAAAUABcAAAAJAAwAAAAcABcAAAAHAAwAAAAcABYAAAAJAAwAAAAcABUAAAAHAAwAAAAcABQAAAAJAAwAAAAcABMAAAAJAAwAAAAcABIAAAAJAAwAAAAcABEAAAAJAAwAAAAUABYAAAAJAAwAAAAUABUAAAAJAAwAAAAUABQAAAAJAAwAAAAUABMAAAAHAAwAAAAUABIAAAAJAAwAAAAUABEAAAAJAAwAAAAhABcAAAAJAAwAAAAhABYAAAAHAAwAAAAhABUAAAAJAAwAAAAhABQAAAAJAAwAAAAhABMAAAAJAAsAAAAgABMAAAAIAAsAAAAfABMAAAAIAAsAAAASABEAAAAIAA0AAAARABEAAAAIAA0AAAAQABEAAAAIAAsAAAAPABEAAAAIAAsAAAAOABEAAAAIAA0AAAANABEAAAAIAA0AAAAMABEAAAAHAAsAAAAMABIAAAAJAAwAAAAMABMAAAAHAAwAAAAMABQAAAAHAAwAAAAMABUAAAAJAA0AAAALABUAAAAIAAsAAAAKABUAAAAIAAsAAAAJABUAAAAIAAsAAAAIABUAAAAIAA0AAAArAA8AAAAIAAsAAAAqAA8AAAAHAAsAAAAqABAAAAAJAAwAAAAqABEAAAAJAAwAAAAqABIAAAAHAAwAAAAqABMAAAAJAAwAAAA=")
tile_set = ExtResource("1_xqlja")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=404524146]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Filler" type="Control" parent="VBoxContainer" unique_id=1372648557]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer" unique_id=2058460947]
layout_mode = 2
text = "Green Jumps"
label_settings = SubResource("LabelSettings_xqlja")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer" unique_id=716533977]
layout_mode = 2
text = "A Game By Joseph Coffa"
label_settings = SubResource("LabelSettings_1aipp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Filler2" type="Control" parent="VBoxContainer" unique_id=709455999]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=2013515454]
layout_mode = 2

[node name="Filler" type="Control" parent="VBoxContainer/HBoxContainer" unique_id=1719600320]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=929599604]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 24

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1719096033]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
theme_override_fonts/font = ExtResource("1_1aipp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ejyv4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u2gaw")
theme_override_styles/hover = SubResource("StyleBoxFlat_l8n0t")
text = "Play"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=392810849]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.33333334, 0.8, 1)
theme_override_fonts/font = ExtResource("1_1aipp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ejyv4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kemk3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3q3p2")
text = "Level Select"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=457329486]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1aipp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ejyv4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xqlja")
theme_override_styles/hover = SubResource("StyleBoxFlat_nja1t")
text = "Quit"

[node name="Filler2" type="Control" parent="VBoxContainer/HBoxContainer" unique_id=2084104553]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Filler3" type="Control" parent="VBoxContainer" unique_id=423842028]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1704316212]
modulate = Color(1, 1, 0, 1)
position = Vector2(160, 288)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_3q3p2")

[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
